--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "clean": "rimraf lib/* README.md",
     "build": "npm run build:docs && npm run build:browser",
     "build:docs": "jsdoc2md src/**/*.js > README.md",
-    "build:browser": "babel src -d lib"
+    "build:babel": "babel src -d lib",
+    "build:browser": "browserify index.js -o ./lib/bundle.js -t [ babelify --presets [ es2015 ] ]"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,8 @@
     "babel-cli": "^6.6.0",
     "babel-polyfill": "^6.6.1",
     "babel-preset-es2015": "^6.6.0",
+    "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
     "jsdoc-to-markdown": "^1.3.3",
     "mocha": "^2.4.5",
     "rimraf": "^2.5.2",
